--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "type": "module",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://vinayyellaram.in",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +23,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
     "framer-motion": "^12.23.25",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.556.0",
     "postcss": "^8.5.6",
     "react": "^19.2.1",
