--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "main": "index.js",
-  "homepage": "https://vinayyellaram.github.io/Portfolio/",
+  "homepage": "https://vinayyellaram.in",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
