--- a/package.json
+++ b/package.json
@@ -17,21 +17,30 @@
   "description": "",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.556.0",
+    "ogl": "^1.0.11",
     "postcss": "^8.5.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-helmet": "^6.1.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.2",
     "vite": "^7.2.6"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.4.0"
   }
 }
