--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-helmet": "^6.1.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.2",
